crates/ferrum-interfaces/tests/ui/vnext/fail/operation_oracle_registration_cannot_be_constructed.rs
use ferrum_interfaces::vnext::OperationOracleRegistration;

fn main() {
    let _ = OperationOracleRegistration {
        expected_descriptor: panic!(),
        oracle: panic!(),
    };
}
